# Slicer-PETDICOMExtension

./: .gitignore  CMakeLists.txt  README.md  SUVFactorCalculator.cxx  SUVFactorCalculator.xml  dcmHelpersCommon.cxx  dcmHelpersCommon.h
CMake/: vtkSUVFactorCalculatorVersionConfigure.h.in
DICOMPETSUVPlugin/: CMakeLists.txt  DICOMPETSUVPlugin.py
DICOMPETSUVPlugin/Py/: CMakeLists.txt
DICOMRWVMPlugin/: CMakeLists.txt  DICOMRWVMPlugin.py
Py/: CMakeLists.txt  DICOMPETSUVPlugin.py  DICOMPETSUVPlugin.py~  DICOMRWVMPlugin.py  DICOMRWVMPlugin.py~
SUVFactorCalculatorCLI/: CMakeLists.txt  SUVFactorCalculator.cxx  SUVFactorCalculator.xml  dcmHelpersCommon.cxx  dcmUnitsConversionHelper.cxx  dcmUnitsConversionHelper.h  itkDCMTKFileReader.cxx  itkDCMTKFileReader.h
SUVFactorCalculatorCLI/CMake/: SUVFactorCalculatorMacroExtractRepositoryInfo.cmake  vtkSUVFactorCalculatorVersionConfigure.h.in
Testing/: CMakeLists.txt  PETDicomExtensionSelfTest.py
